--- a/_site.yaml
+++ b/_site.yaml
@@ -3,8 +3,8 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
-      href: about.html
+    - text: "Resume"
+      href: resume.html
     - icon: fa-envelope fa-lg
       href: mailto: amy715@gmail.com
     - icon: fa-github fa-lg
